--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wombs-audio-controller",
   "version": "0.0.0",
   "description": "audio controller for web-audio-api",
-  "main": "index.js",
+  "main": "wombs-audio-controller.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
