--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git@github.com:cabbibo/wombs-audio-controller.git"
   },
   "dependencies":{
-    "wombs-audio-component":"0.0.0",
+    "wombs-audio-component":"*",
     "underscore":"1.6.0"
   },
   "keywords": [
